--- a/hello-world/pom.xml
+++ b/hello-world/pom.xml
@@ -7,6 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>hello-world</name>
+	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 	<modules>
 		<module>project</module>
 		<module>integration-test</module>
