--- a/hello-world/project/hello-world-ear/pom.xml
+++ b/hello-world/project/hello-world-ear/pom.xml
@@ -72,8 +72,49 @@
 					</modules>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.glassfish.maven.plugin</groupId>
+				<artifactId>maven-glassfish-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<glassfishDirectory>${glassfish.home}</glassfishDirectory>
+					<domainDirectory>${glassfish.home}/domains/</domainDirectory>
+					<user>${glassfish.user}</user>
+					<passwordFile>${glassfish.passwordfile}</passwordFile>
+					<autoCreate>true</autoCreate>
+					<domain>
+						<name>${glassfish.domain}</name>
+						<host>${glassfish.domain.host}</host>
+						<adminPort>${glassfish.domain.adminPort}</adminPort>
+						<httpPort>8080</httpPort>
+						<httpsPort>8443</httpsPort>
+					</domain>
+					<components>
+						<component>
+							<name>${project.artifactId}</name>
+							<artifact>${project.build.directory}/${project.build.finalName}.ear</artifact>
+						</component>
+					</components>
+				</configuration>
+				<executions>
+                    <execution>
+                        <id>gf-undeploy</id>
+                        <goals>
+                            <goal>undeploy</goal>
+                        </goals>
+                        <phase>clean</phase>
+                    </execution>
+                    <execution>
+                        <id>gf-deploy</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+			</plugin>
 		</plugins>
+		<finalName>hello-world-${project.version}</finalName>
 	</build>
-
-
 </project>
+
