--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>it.polimi.se2</groupId>
-    <artifactId>welcome-me</artifactId>
+    <artifactId>calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <dependencies>
@@ -57,7 +57,7 @@
                 </executions>-->
             </plugin>
         </plugins>
-        <finalName>welcome-me</finalName>
+        <finalName>calculator</finalName>
     </build>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -65,5 +65,4 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <name>welcome-me</name>
 </project>
