--- a/registration/src/main/webapp/WEB-INF/web.xml
+++ b/registration/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
         <realm-name>jdbcRealmRegistration</realm-name>
         <form-login-config>
             <form-login-page>/login.xhtml</form-login-page>
-            <form-error-page>/login.xhtml</form-error-page>
+            <form-error-page>/login.xhtml?error=true</form-error-page>
         </form-login-config>
     </login-config>
     <security-constraint>
@@ -42,7 +42,7 @@
             <url-pattern>/user/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
-            <role-name>USER</role-name>
+            <role-name>USERS</role-name>
         </auth-constraint>
     </security-constraint>
 </web-app>
